fix(jdk17): replace Java 21 List.getFirst()/Thread.threadId() with JDK17-compatible equivalents
Chunk 5 cherry-picks introduced List.getFirst() and Thread.currentThread().threadId()
calls (Java 21+ APIs) in LSMTreeIndexCompactor, several test classes, and a
performance benchmark. Replaced with list.get(0) and Thread.currentThread().getId()
to keep the java17 branch on maven-compiler-plugin release 17.